Patch 03: background image not showing correctly on safari

--- a/soho-app/src/app/home/home.component.css
+++ b/soho-app/src/app/home/home.component.css
@@ -7,7 +7,7 @@
 
 
 .landing {
-  background-image: url("/assets/images/site/spa.jpg");
+  background-image: url("/assets/images/site/spanew.jpg");
   background-color: rgba(0,
   0,
   0,
